# pytorch-churn-classifier

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
api/: __init__.py  app.py
docs/: Machine Learning Canvas (v1.2).docx  Model_Card.md  api.md  architecture.md  deployment_architecture.md  experiments.md  model_evaluation.md  monitoring_plan.md  run_flow.md
notebooks/: 01_eda_telco_churn.ipynb  02_model_comparison.ipynb
scripts/: compare_models.py  save_processed.py  start_mlflow.py
src/projeto_ml/: __init__.py  config.py  data.py  eval.py  features.py  models.py  predict.py  train.py
tests/: test_api.py  test_data.py  test_eval.py  test_models.py  test_package.py  test_train.py
