[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-tech-challenge"
version = "0.1.0"
description = "Projeto de Machine Learning para o Tech Challenge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4",
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "joblib>=1.4",
    "mlflow>=2.5",
    "fastapi>=0.95",
    "uvicorn[standard]>=0.18",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

